# tangents

./: CONCEPTS.md  Cargo.toml  PLAN.md  README.md  project-spec.md
src/: app.rs  cli.rs  config.rs  event.rs  keys.rs  main.rs  pty.rs  session.rs  state.rs  tree.rs  watcher.rs
