[package]
name = "tangents"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
tui-term = "0.3.4"
tui-tree-widget = "0.24.0"
uuid = { version = "1.23.5", features = ["v4"] }
vt100 = "0.16.2"
